# WRBench

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR.md  LICENSE  README.md  pyproject.toml  wrbench.runtime.example.json  wrcam.runtime.example.json
.github/workflows/: ci.yml
docs/: PROJECT_PAGE.md  adding-a-model.md  camera-control.md  cost-profiling.md  first-frame.md  index.html  prompts.md  robots.txt
docs/backends/: README.md
docs/data/: resource_profile_summary.all.json  resource_profile_summary.all.md
docs/eval/: README.md
docs/models/: ac3d.md  ati-wan21-14b.md  cosmos3-nano-generator.md  easyanimate-v51-camera.md  gen3c.md  hunyuan-game-craft.md  hunyuan-worldplay.md  hunyuanworld-voyager.md  hydra.md  hyworld-worldgen.md  inspatio-world.md  lingbot-world-act.md  lingbot-world.md  liveworld.md  magicworld.md  matrix-game-2.md  matrix-game-3.md  minwm-hy-action2v.md  minwm-wan-action2v.md  recammaster.md  sana-wm.md  spatia.md  versecrafter.md  wan21-fun-14b-cam.md  wan21-fun-1p3b-cam.md  wan22-fun-5b-cam.md  wan22-fun-a14b-cam.md
docs/teamwork/: README.md  current.md  index.json
examples/: README.md  quickstart.py
scripts/: oss_verify.sh  run_fairness_verification.sh  run_natural25_generation.py
scripts/eval/: score_runtime_v2_d3d6.sh
scripts/t2v/: prepare_minwm_wan_acceptance_probe.py  run_minwm_wan_acceptance_probe.sh
src/wrbench/: __init__.py  benchmark.py  builder.py  cli.py  contracts.py  datasets.py  payload.py  presets.py  registry.py  runner.py  runtime.py  trajectory.py
src/wrbench/adapters/: __init__.py  _utils.py  action_candidate.py  base.py  easyanimate.py  gen3c.py  hunyuan.py  hydra.py  lingbot.py  liveworld.py  magicworld.py  minwm.py  minwm_camera_patch.py  minwm_wan.py  recammaster.py  sana_wm.py  spatia_inspatio.py  versecrafter.py  wan_fun.py
src/wrbench/backends/: __init__.py  base.py  local_subprocess.py  registry.py
src/wrbench/eval/: __init__.py  runtime.py
src/wrbench/firstframe/: __init__.py  generate.py
src/wrbench/models/: ac3d.json  ati-wan21-14b.json  cosmos3-nano-generator.json  easyanimate-v51-camera.json  gen3c.json  hunyuan-game-craft.json  (+17 more)
src/wrcam/: __init__.py  actions.py  builder.py  cli.py  contracts.py  payload.py  presets.py  registry.py  runner.py  runtime.py  trajectory.py
tests/: test_actions.py  test_backends.py  test_backends_registry.py  test_benchmark_tasks.py  test_builder.py  test_compile_camera.py  test_eval_package.py  test_eval_scoring.py  test_firstframe.py  test_presets.py  test_profiling.py  test_prompts.py  test_registry.py  test_run_natural25_generation.py  test_t2v_acceptance.py
(+120 files in other folders)
